<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/new_game"
        android:id="@+id/action_newgame"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_new_style_24"
        />
    <item
        android:title="@string/settings"
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_game_settings"
        />
    <item
        android:title="@string/help"
        android:id="@+id/action_help"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_help_24"
        />
</menu>