<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.ForgotPasswordFragment"
    android:background="@drawable/gradient_royal"
    android:id="@+id/bottom_sheet_password">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:backgroundTint="@color/colorGradientRoyalBlue"
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginStart="55dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="10dp"
        android:background="@color/whiteCardColor"
        android:elevation="5dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">


            <TextView
                android:id="@+id/username_settings"
                android:layout_width="222dp"
                android:layout_height="51dp"
                android:autofillHints="@string/prompt_password"
                android:text="@string/changing_password"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="4dp"
                android:textColor="@color/white"
                android:selectAllOnFocus="true"
                app:drawableStartCompat="@drawable/ic_baseline_vpn_key_24" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:backgroundTint="@color/white"
                android:background="@color/white" />

            <TextView
                android:id="@+id/password_description"
                android:layout_width="222dp"
                android:gravity="center"
                android:layout_height="51dp"
                android:text="@string/type_down_your_email_to_reset_your_new_password"
                android:textColor="@color/white"/>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:backgroundTint="@color/white"
                android:background="@color/white" />

            <EditText
                android:id="@+id/forgot_email_et"
                android:layout_width="222dp"
                android:gravity="center"
                android:layout_height="51dp"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/enter_email_"
                android:textColor="@color/white"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:textColorHint="@color/white"
                android:selectAllOnFocus="true"
                android:inputType="textEmailAddress" />


            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:backgroundTint="@color/white"
                android:background="@color/white" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="#0BA611"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@color/white" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>




</FrameLayout>