<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/game_choose_layout"
    android:background="@drawable/gradient_list">


    <TextView
        android:id="@+id/choose_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="119dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/choose_a_game"
        android:textSize="47sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView1"
        android:clickable="true"
        android:elevation="30dp"
        app:cardElevation="30dp"
        app:cardCornerRadius="30dp"
        app:strokeWidth="4dp"
        app:strokeColor="@color/white"
        android:backgroundTint="#1DB123"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/hangman_icon"
                android:contentDescription="@string/hangedman" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:padding="15dp"
                android:text="@string/hangman"
                android:textSize="29sp"
                android:textStyle="bold" />


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView2"
        app:cardBackgroundColor="#7849CA"
        android:elevation="30dp"
        app:cardElevation="30dp"
        app:cardCornerRadius="30dp"
        app:strokeColor="@color/white"
        app:strokeWidth="4dp"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/puzzle_piece"
                android:contentDescription="@string/puzzle_game" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:padding="15dp"
                android:text="@string/jigsaw_puzzle"
                android:textSize="30sp"
                android:textStyle="bold" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView3"
        app:cardBackgroundColor="#D64576"
        android:elevation="30dp"
        app:cardElevation="30dp"
        app:cardCornerRadius="30dp"
        app:strokeWidth="4dp"
        app:strokeColor="@color/white"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/numbers_puzzle"
            android:contentDescription="@string/number_game" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="casual"
            android:padding="15dp"
            android:text="@string/sliding_puzzle"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>